# mlfactory

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  REUSE-MAP.md  STATUS.md  ml-factory-architecture.md  ml-factory-explained.md  pyproject.toml
.claude/: README.md
.claude/agents/: mlfactory-advisor.md  mlfactory-artifact-validator.md  mlfactory-column-profiler.md  mlfactory-leakage-scanner.md  mlfactory-model-recommender.md  mlfactory-stage-runner.md
.claude/commands/: mlfactory-eda.md  mlfactory-gates.md  mlfactory-run.md  mlfactory-setup.md
docs/: ADRs.md  PRD.md  example-feature-spec.yaml  running-with-claude-code.md
mlfactory/: __init__.py  artifacts.py  charts.py  cli.py  compare.py  config.py  evaluate.py  generate.py  metrics.py  model.py  model_card.py  monitor.py  policy.py  profile.py  qini.py  recommend.py  report.py  source.py  split.py  uplift.py  validate.py
mlfactory/artifacts/: __init__.py  base.py  schemas.py  validate.py
mlfactory/compute/: __init__.py  compare.py  engineer.py  (+6 more)
tests/: test_artifacts.py  test_card_authoring.py  test_compare.py  test_config.py  test_configure.py  test_construction_transforms.py  test_decisions.py  test_downstream_decisions.py  test_engineer.py  test_engineer_train.py  test_evaluate.py  test_evaluate_decisions.py  test_exclude_columns.py  test_gates.py  test_generate.py  test_honesty_fixes.py  test_hp_search.py  test_leakage_scan.py  test_metrics.py  test_model.py  test_model_card.py  test_monitor.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_v2.py  test_policy.py  test_policy_contrast.py  test_profile.py  test_qini.py  test_recommend.py  test_report.py  test_run.py  test_select_decisions.py  test_smoke.py  test_source.py  test_split.py  test_treatment.py  test_uplift.py  test_validate.py  test_validate_artifact.py
(+6 files in other folders)
