[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlfactory"
version = "0.1.0"
description = "Config-driven churn/retention analysis — deterministic tested compute + AI-driven judgment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "danielamendirichaga", email = "danielamendirichaga@gmail.com" }]
keywords = ["churn", "retention", "machine-learning", "ai-copilot", "ks", "psi"]

# Deterministic tested core imports ONLY numpy/pandas/pyarrow/pyyaml.
# scikit-learn / matplotlib / plotly / streamlit are used by the model, policy,
# chart, and dashboard layers — declared here, never imported by the tested core.
dependencies = [
    "typer>=0.12,<1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "imbalanced-learn>=0.12",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
mlfactory = "mlfactory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mlfactory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

# pandas ships no type stubs (pandas-stubs is too strict here); sqlalchemy is an optional,
# guarded import for the postgres source. Treat both as untyped.
[[tool.mypy.overrides]]
module = ["pandas.*", "sqlalchemy.*", "sklearn.*", "xgboost.*", "imblearn.*", "joblib.*"]
ignore_missing_imports = true
